# SGR

./: .gitignore  .gitmodules  BindDescriptorSetCommand.h  BindIndexCommand.h  BindPipelineCommand.h  BindVertexCommand.h  CMakeLists.txt  CMakeSettings.json  Command.h  CommandManager.cpp  CommandManager.h  DescriporManager.cpp  DescriptorManager.cpp  DescriptorManager.h  DrawCommand.h  DrawIndexedCommand.h  FileManager.cpp  FileManager.h  LogicalDeviceManager.cpp  LogicalDeviceManager.h  Makefile  MemoryManager.cpp  MemoryManager.h  PhysicalDeviceManager.cpp  PhysicalDeviceManager.h  PipelineManager.cpp  PipelineManager.h  README.md  RenderPassManager.cpp  RenderPassManager.h  SGR.cpp  SGR.h  SGRConfig.cmake.in  SGRConfigVersion.cmake.in  SGR_test.sln  SGR_test.vcxproj  SGR_test.vcxproj.filters  ShaderManager.cpp  ShaderManager.h  SwapChainManager.cpp  (+11 more)
.github/workflows/: ci.yml
Resources/: mac-compile.sh  win-compile.bat
Resources/ShaderExamples/: gltf.frag  gltf.vert  instance.vert  objModel.frag  objModel.vert
SGRShaders/: compile.bat  fragment.spv  shader.vert  shaderInstance.frag  shaderInstance.vert  vertex.spv  win-compile.bat
env/: unix_env_install.sh  win_env_install.ps1
examplesData/: CMakeLists.txt  test.cpp
examplesData/Resources/3d_models/Audi_S5_Sportback/: Audi_S5_Sportback.mtl  Meshpart1_spec.heic
examplesData/Resources/3d_models/bmw_m3/: bmw_m3.mtl
examplesData/Resources/icd.d/: MoltenVK_icd.json
examplesData/Resources/linux/: SGR_test.desktop.in  run.sh
examplesData/Resources/logo/: Logo.icns  icon.rc
examplesData/Resources/macosx/: Info.plist
examplesData/Resources/shaders/: fragGLTF.spv  fragObjModel.spv  mac-compile.sh  texture.frag  vertGLTF.spv  vertInstanceSh.spv  vertObjModel.spv
examplesData/Resources/textures/: ico.icns
examplesData/shaders/: colorFragment.spv  fragTextureSh.spv  fragment.spv  instance.vert  mac-compile.sh  shaderInstance.frag  vertInstanceSh.spv  vertex.spv
include/: BindDescriptorSetCommand.h  BindIndexCommand.h  BindPipelineCommand.h  BindVertexCommand.h  Command.h  CommandManager.h  DescriptorManager.h  LogicalDeviceManager.h  MemoryManager.h  PhysicalDeviceManager.h  PipelineManager.h  RenderPassManager.h  SGR.h  ShaderManager.h  SwapChainManager.h  TextureManager.h  UserInterface.h  WindowManager.h  ico.h  utils.h  version.h
src/: CommandManager.cpp  DescriptorManager.cpp  FileManager.cpp  LogicalDeviceManager.cpp  MemoryManager.cpp  PhysicalDeviceManager.cpp  PipelineManager.cpp  RenderPassManager.cpp  SGR.cpp  ShaderManager.cpp  SwapChainManager.cpp  TextureManager.cpp  UserInterface.cpp  WindowManager.cpp  utils.cpp
